src/objects/Actual_Financial_Item__c.object
<CustomObject>
    <description>LPAM - Actual Items</description>
    <fields>
        <fullName>Accrued__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accrued</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_Financial_Item__c</fullName>
        <label>Actual Financial Item</label>
        <referenceTo>Actual_Financial__c</referenceTo>
        <relationshipLabel>Actual Financial Items</relationshipLabel>
        <relationshipName>Underpayment_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Annual_Payment_Note__c</fullName>
        <label>Annual Payment Note</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Audit__c</fullName>
        <label>Audit</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Borrower_Calculation__c</fullName>
        <label>Borrower Calculation</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Financial__c</fullName>
        <description>This is the Budget Item from Borrower</description>
        <label>Budget Financial</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rental Income</fullName>
                </value>
                <value>
                    <fullName>Grant Income</fullName>
                </value>
                <value>
                    <fullName>Other Income</fullName>
                </value>
                <value>
                    <fullName>(Less) Vacancy</fullName>
                </value>
                <value>
                    <fullName>(Less) Concession/Lost Revenue</fullName>
                </value>
                <value>
                    <fullName>Administrative</fullName>
                </value>
                <value>
                    <fullName>Marketing &amp; Leasing</fullName>
                </value>
                <value>
                    <fullName>Personal Salary &amp; Benefits</fullName>
                </value>
                <value>
                    <fullName>Property Management fee</fullName>
                </value>
                <value>
                    <fullName>Utilities</fullName>
                </value>
                <value>
                    <fullName>Contract Services</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Property Taxes &amp; Insurance</fullName>
                </value>
                <value>
                    <fullName>SDHC Monitoring Fee</fullName>
                </value>
                <value>
                    <fullName>Resident Services</fullName>
                </value>
                <value>
                    <fullName>Debt Service</fullName>
                </value>
                <value>
                    <fullName>Deferred Developer Fee</fullName>
                </value>
                <value>
                    <fullName>Operating Reserve</fullName>
                </value>
                <value>
                    <fullName>Replacement Reserve</fullName>
                </value>
                <value>
                    <fullName>General Partner Asset Management Fee</fullName>
                </value>
                <value>
                    <fullName>Limited Partner Asset Management Fee</fullName>
                </value>
                <value>
                    <fullName>Ground Rent</fullName>
                </value>
                <value>
                    <fullName>HCD .42%</fullName>
                </value>
                <value>
                    <fullName>Bond Fee</fullName>
                </value>
                <value>
                    <fullName>Other Fees</fullName>
                </value>
                <value>
                    <fullName>Principle Reserve</fullName>
                </value>
                <value>
                    <fullName>Taxes/Insurance Reserve</fullName>
                </value>
                <value>
                    <fullName>Cal HFA Reserve</fullName>
                </value>
                <value>
                    <fullName>Transitional Reserve</fullName>
                </value>
                <value>
                    <fullName>Social Services Reserve</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Earned_Funded__c</fullName>
        <label>Earned/Funded</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest__c</fullName>
        <label>Interest</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Reserve_Balance__c</fullName>
        <formula>Earned_Funded__c + Interest__c + Paid__c + Withdrawal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Reserve Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Used for General Notes or to explain an &apos;Other&quot; option selection</description>
        <inlineHelpText>Place any general notes or an explaination for selecting &quot;Other&quot;</inlineHelpText>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Paid__c</fullName>
        <label>Paid</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <formula>Actual_Financial_Item__r.Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_RPT__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type RPT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDHC_Allowance__c</fullName>
        <label>SDHC Allowance</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SDHC_Calculated_Per_Unit__c</fullName>
        <formula>SDHC_Calculated__c / Actual_Financial_Item__r.Project__r.Property__r.Total_Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SDHC Calculated Per Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SDHC_Calculated__c</fullName>
        <label>SDHC Calculated</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Conventions and Meetings</fullName>
                </value>
                <value>
                    <fullName>Management Consultants</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Administrative Rent Free Unit</fullName>
                </value>
                <value>
                    <fullName>Office Supplies</fullName>
                </value>
                <value>
                    <fullName>Computer Expenses</fullName>
                </value>
                <value>
                    <fullName>Office utilities</fullName>
                </value>
                <value>
                    <fullName>Licenses and Software</fullName>
                </value>
                <value>
                    <fullName>Bad Debts</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous Admin Costs</fullName>
                </value>
                <value>
                    <fullName>Manager Salaries</fullName>
                </value>
                <value>
                    <fullName>Office Salaries</fullName>
                </value>
                <value>
                    <fullName>Healthcare Benefits</fullName>
                </value>
                <value>
                    <fullName>Retirement Benefits</fullName>
                </value>
                <value>
                    <fullName>Employment Taxes</fullName>
                </value>
                <value>
                    <fullName>Payroll Fees</fullName>
                </value>
                <value>
                    <fullName>Other Employee Benefits</fullName>
                </value>
                <value>
                    <fullName>Electricity</fullName>
                </value>
                <value>
                    <fullName>Water</fullName>
                </value>
                <value>
                    <fullName>Gas</fullName>
                </value>
                <value>
                    <fullName>Sewer</fullName>
                </value>
                <value>
                    <fullName>Internet</fullName>
                </value>
                <value>
                    <fullName>Garbage/Trash Removal</fullName>
                </value>
                <value>
                    <fullName>Landscaping</fullName>
                </value>
                <value>
                    <fullName>Elevator</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Painting</fullName>
                </value>
                <value>
                    <fullName>Other Contract Services</fullName>
                </value>
                <value>
                    <fullName>Maintenance Salaries</fullName>
                </value>
                <value>
                    <fullName>General Interior Maintenance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Withdrawal__c</fullName>
        <label>Withdrawal</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Actual Financial Item</label>
    <nameField>
        <displayFormat>AFItem-{00000}</displayFormat>
        <label>ActualFinancialItemID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Actual Financial Items</pluralLabel>
    <recordTypes>
        <fullName>Fees_Required_Payments</fullName>
        <active>true</active>
        <label>Fees/Required Payments</label>
    </recordTypes>
    <recordTypes>
        <fullName>Income</fullName>
        <active>true</active>
        <description>Income Types like Rent, Grant and Other Incomes</description>
        <label>Income</label>
    </recordTypes>
    <recordTypes>
        <fullName>Operating_Expenses</fullName>
        <active>true</active>
        <description>Expense Types including Admin, Utilities, Fees</description>
        <label>Operating Expenses</label>
    </recordTypes>
    <recordTypes>
        <fullName>Waterfall</fullName>
        <active>true</active>
        <description>Waterfall Fees including Debt Service, DDF and Operating Reserve Deposit</description>
        <label>Waterfall</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>